add_subdirectory("${PROJECT_SOURCE_DIR}/vendor/googletest" "vendor/googletest")

macro(package_add_test TESTNAME)
    add_executable(${TESTNAME} ${ARGN})
    target_link_libraries(${TESTNAME} gtest gmock gtest_main)
    gtest_discover_tests(${TESTNAME}
        WORKING_DIRECTORY ${PROJECT_DIR}
        PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
    )
    set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
endmacro()

package_add_test(test_LinkedList test_LinkedList.cpp)
target_include_directories(test_LinkedList PUBLIC ${PROJECT_SOURCE_DIR}/include/)

